# components

./: Cargo.toml  Justfile  dev-deps.txt
.github/workflows/: check-verify.yml  push-components.yml
docker/: obelisk-local.toml  obelisk-oci.toml
docker/activity-docker/: obelisk-local.toml
fly/: obelisk-local.toml  obelisk-oci.toml
fly/activity-fly-http/: .envrc-example  Justfile  README.md  fly-http-machine-config.json.sh  obelisk-local.toml  obelisk-oci.toml
fly/activity-fly-http/src/: machine.rs
fly/activity-fly-http/src/snapshots/: activity_fly_http__machine__tests__machine_deserialization.snap
fly/activity-fly-http/wit/obelisk-flyio_activity-fly-http@1.0.0-beta/: fly.wit
fly/webhook-fly-secrets-updater/: .envrc-example  Justfile  obelisk-local.toml  obelisk-oci.toml
github/activity-github-graphql/: .envrc-example  Cargo.toml  Justfile  README.md  build.rs  obelisk-local.toml  obelisk-oci.toml
github/activity-github-graphql/src/: lib.rs
github/activity-github-graphql/wit/: github-world.wit
github/activity-github-graphql/wit/obelisk-components_github/: github.wit
http/activity-http-generic/: Cargo.toml  Justfile  README.md  obelisk-local.toml  obelisk-oci.toml
http/activity-http-generic/src/: lib.rs
http/activity-http-generic/wit/: impl.wit
http/activity-http-generic/wit/obelisk-components_generic-http/: generic-http.wit  http-get.wit
obelisk/: obelisk-local.toml  obelisk-oci.toml
obelisk/activity-obelisk-client-http/: obelisk-local.toml  obelisk-oci.toml
scripts/: collect-for-obelisk-generate.sh  push-components.sh
